<resources>
    <string name="app_name">WordGuesser</string>
    <string name="select_idioma">LANGUAGE</string>
    <string name="select_dificultad">DIFFICULTY</string>
    <string name="select_modo">GAME MODE</string>
    <string name="es">SPANISH</string>
    <string name="en">ENGLISH</string>
    <string name="continuar">NEXT</string>
    <string name="facil">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="dificil">HARD</string>
    <string name="gl">GALICIAN</string>
    <string name="cientifico">SCIENTIFIC</string>
    <string name="contrarreloj">TIME TRIAL</string>
    <string name="clasico">CLASSIC</string>
    <string name="partidas">GAMES</string>
    <string name="victorias">VICTORIES</string>
    <string name="racha_actual">WINNING STREAK</string>
    <string name="mejor_racha">BEST STREAK</string>
    <string name="estadisticas">STATISTICS</string>
    <string name="historial">HISTORY</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="nueva_partida">NEW GAME</string>
    <string name="my_games">MY GAMES</string>
    <string name="perfil">MY PROFILE</string>
    <string name="registrate">SIGN UP</string>
    <string name="login">SIGN IN</string>
    <string name="cerrar_sesion">SIGN OUT</string>
    <string name="language">LANGUAGE</string>
    <string name="mode">MODE</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="word">WORD</string>
    <string name="campos_no_vacios">There is an empty field</string>
    <string name="dont_match_passwd">Passwords do not match</string>
    <string name="username_exist">Username already exists</string>
    <string name="username_passwd_dont_match">Username and password do not match</string>
    <string name="nombre">Name</string>
    <string name="apellidos">Surname</string>
    <string name="repetir_passwd">Repeat password</string>
    <string name="aceptar_registro">SUBMIT</string>
    <string name="welcome">WELCOME</string>
    <string name="eliminar_cuenta">DELETE ACCOUNT</string>
    <string name="cambiar_pass">CHANGE PASSWORD</string>
    <string name="modificar_datos">MODIFY MY DATA</string>
    <string name="new_passwd">New password</string>
    <string name="new_passwd_repeat">Repeat new password</string>
    <string name="accept">ACCEPT</string>
    <string name="como_jugar">HOW TO PLAY?</string>
    <string name="texto_como_jugar1">You have to guess the secret word in 3, 5 or 7 attempts (it depends of the level difficulty). Each attemp must be one valid word and if the word does not exist the game will notice you.</string>
    <string name="texto_como_jugar2">Before each attemp the color of the boxes change to show how close you are to guess the word.</string>
    <string name="texto_como_jugar3">The word will change to green if the letter is in the correct position, to orange if the word is in the word but not in that position and to grey if the letter is not in the word.</string>
    <string name="manten_pulsado">LONG PRESS ON THE TITLES TO MODIFY</string>
    <string name="error_edit_passwd">Password could not be changed</string>
    <string name="new_passwd_not_match">New password does not match</string>
    <string name="old_passwd_not_match">Old password does not match</string>
    <string name="must_5_letters">The word must be 5 letters long</string>
    <string name="word_not_valid">The word is not valid</string>
    <string name="derrota_msg">You have lost! The word was:</string>
    <string name="play_again">Play again</string>
    <string name="return_menu">Return to the start menu</string>
    <string name="victoria_msg">Congratulations! You got the word right</string>
    <string name="username_cannot_edit">That username is not available</string>
    <string name="msg_delete_user">Are you sure you want to delete the user?</string>
    <string name="seguro">SURE</string>
    <string name="cancelar">CANCEL</string>
    <string name="msg_log_out">Are you sure you want to log out?</string>
    <string name="filtro">FILTER</string>
    <string name="trucos">See tricks to play</string>
    <string name="limpiar">clear</string>
    <string name="derrota_time_trial">You have lost! Timer ended. The word was:</string>
    <string name="resultado">RESULT</string>
    <string name="victoria">VICTORY</string>
    <string name="derrota">DEFEAT</string>
    <string name="play_you_too">You can also play at:</string>
    <string name="share">SHARE</string>
    <string name="last_game_result">The result of my last game:</string>
    <string name="victorias_seguidas">victories in a row</string>
    <string name="manten_pulsado_filtro">PARA FILTRAR MANTEN PULSADO</string>
</resources>