<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_dificultad" />

    <Button
        android:id="@+id/buttonDificultadFacil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facil" />

    <Button
        android:id="@+id/buttonDificultadNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal" />

    <Button
        android:id="@+id/buttonDificultadDificil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dificil" />

    <Button
        android:id="@+id/buttonDificultadContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuar" />
</LinearLayout>