<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="50dp"
            android:text="@string/select_idioma"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp">

        <Button
            android:id="@+id/buttonIdiomaEspañol"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/es"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonIdiomaIngles"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp">

        <Button
            android:id="@+id/buttonIdiomaGallego"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/gl"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonIdiomaContinuar"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/continuar"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>