<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="50dp">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_modo"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp">

        <Button
            android:id="@+id/buttonModoClasico"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/clasico"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonModoContrareloj"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/contrarreloj"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp">

        <Button
            android:id="@+id/buttonModoCientifico"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/cientifico"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonModoContinuar"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/continuar"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>