<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".iu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingVertical="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <EditText
            android:id="@+id/editTextTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="80dp">

        <Button
            android:id="@+id/buttonRegistro"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrate"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>